메인페이지 푸터 언어셋 변경 드롭다운 추가

--- a/public/locales/en/publicFooter.json
+++ b/public/locales/en/publicFooter.json
@@ -21,5 +21,8 @@
     "heading": "Scordi Terms",
     "serviceUsage": "Term of Service Usage",
     "privacy": "Term of Privacy"
+  },
+  "lang": {
+    "placeholder": "Select Language"
   }
 }
