--- a/public/locales/ko/publicFooter.json
+++ b/public/locales/ko/publicFooter.json
@@ -21,5 +21,8 @@
     "heading": "스코디 기본약관",
     "serviceUsage": "서비스 이용약관",
     "privacy": "개인정보 처리방침"
+  },
+  "lang": {
+    "placeholder": "언어를 선택해주세요."
   }
 }
