--- a/public/locales/ko/org-home.json
+++ b/public/locales/ko/org-home.json
@@ -1,9 +1,14 @@
 {
   "heading": "{{orgName}} 팀의 흩어진 결제내역을 확인 해보세요!",
   "newInvoiceAccount": "청구메일 추가",
-  "invoiceAccountAddingModal": {
+  "invoiceAccountAddingPanel": {
     "addAnotherAccount": "다른 계정 추가",
     "account": "계정",
     "removeAccount": "계정 삭제"
+  },
+  "newInvoiceAccountModal": {
+    "title": "청구 메일 계정 추가하기",
+    "description": "여러 메일 계정 등록도 가능해요 <br /> 구글 로그인으로 클릭 한 번에 등록해보세요",
+    "googleLoginText": "구글 계정으로 로그인"
   }
 }
