푸터 주소 수정

--- a/public/locales/en/publicFooter.json
+++ b/public/locales/en/publicFooter.json
@@ -16,7 +16,7 @@
     "label": "Contact",
     "value": "official@01republic.io"
   },
-  "address": "9F 907, 34 Yeongdong-daero 85-gil, Gangnam-gu, Seoul, Republic of Korea",
+  "address": "7-104, 8, Gangnam-daero 53-gil, Seocho-gu, Seoul, Republic of Korea",
   "terms": {
     "heading": "Scordi Terms",
     "serviceUsage": "Term of Service Usage",
