--- a/public/locales/ko/publicFooter.json
+++ b/public/locales/ko/publicFooter.json
@@ -16,7 +16,7 @@
     "label": "문의",
     "value": "official@01republic.io"
   },
-  "address": "서울특별시 강남구 영동대로85길 34, 9층 907호",
+  "address": "서울특별시 서초구 강남대로 53길 8, 7-104 호 (서초동)",
   "terms": {
     "heading": "스코디 기본약관",
     "serviceUsage": "서비스 이용약관",
