GNB 드롭다운에서 번역 누락부분 번역 추가

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -3,6 +3,7 @@
     "setting": "Edit profile",
     "help": "Help",
     "goHomePage": "Homepage",
-    "logout": "Logout"
+    "logout": "Logout",
+    "orgSetting": "Org Settings"
   }
 }
