--- a/public/locales/en/publicTasting.json
+++ b/public/locales/en/publicTasting.json
@@ -5,6 +5,7 @@
   "subtitle3": "Check it in just 5 sec with Scordi.",
   "loading_payment_list": "Loading payment list",
   "hey_payment_list_arrived": "{{name}}, payment arrived!",
+  "payment_list_arrived": "Payment arrived!",
   "scordi_will_take_care": "Scordi will take care of your team billing!",
   "wanna_keep_tracking": "Want to keep tracking automatically?",
   "click_the_button": "Click the button",
