--- a/public/locales/ko/publicTasting.json
+++ b/public/locales/ko/publicTasting.json
@@ -10,6 +10,10 @@
   "wanna_keep_tracking": "서비스 결제 내역을 저장하고, 날짜를 설정하여 보고 싶으시다면",
   "click_the_button": "아래 버튼을 눌러 무료 체험을 신청해주세요.",
   "try_it_free_now": "지금 바로 무료 이용하기",
+  "connected_email": "이메일",
+  "search_started_at": "조회 시작 날짜",
+  "search_finished_at": "조회 종료 날짜",
+  "display_as_krw": "원화로 보기",
   "summary_stat": {
     "services": {
       "label": "이용중인 서비스",
