--- a/public/locales/en/publicTasting.json
+++ b/public/locales/en/publicTasting.json
@@ -13,7 +13,7 @@
   "connected_email": "Email",
   "search_started_at": "Oldest date",
   "search_finished_at": "Latest date",
-  "since_n_ago": "This is result from <b>{{since}}</b>",
+  "result_in_since_n_ago": "This is result from <b>{{since}}</b>",
   "display_as_krw": "Display as KRW",
   "summary_stat": {
     "services": {
