데모p / 서버 에러시 얼럿처리 추가

--- a/public/locales/en/publicTasting.json
+++ b/public/locales/en/publicTasting.json
@@ -28,5 +28,6 @@
       "label": "Total cost",
       "unit": ""
     }
-  }
+  },
+  "something_went_to_wrong": "Something wrong! :(\nplz refresh page and try again"
 }
