--- a/public/locales/ko/publicTasting.json
+++ b/public/locales/ko/publicTasting.json
@@ -28,5 +28,6 @@
       "label": "총 비용",
       "unit": ""
     }
-  }
+  },
+  "something_went_to_wrong": "데이터를 가져오는 중에 무언가 잘못됐어요! :(\n새로고침 후 다시 시도해주세요"
 }
