앱 리스트 모달 ui 수정

--- a/public/locales/en/publicTasting.json
+++ b/public/locales/en/publicTasting.json
@@ -34,5 +34,5 @@
     }
   },
   "something_went_to_wrong": "Something wrong! :(\nplz refresh page and try again",
-  "this_is_detected_subscriptions_from_emails": "These are detected from your inbox"
+  "this_is_detected_subscriptions_from_emails": "Found in your inbox!"
 }
