소셜로그인 풀려있는 경우, 폰 인증 페이지에서 소셜로그인 페이지로 리디렉션 후 돌아오도록 처리 (페이지 추가)

--- a/public/locales/en/sign.json
+++ b/public/locales/en/sign.json
@@ -1,4 +1,10 @@
 {
+  "auth_check": {
+    "page_title": "Checking authenticated account first.."
+  },
+  "pre_sign_page": {
+    "page_title": "Join scordi"
+  },
   "phone_auth": {
     "page_title": "This is all I need!",
     "phone_input": {
