--- a/public/locales/ko/org-home.json
+++ b/public/locales/ko/org-home.json
@@ -11,6 +11,11 @@
     "description": "여러 메일 계정 등록도 가능해요 <br /> 구글 로그인으로 클릭 한 번에 등록해보세요",
     "googleLoginText": "구글 계정으로 로그인"
   },
+  "renewInvoiceAccountModal": {
+    "title": "청구 메일 계정 갱신하기",
+    "description": "{{email}} 계정으로 로그인해주세요. 다른 계정일 경우 스코디가 파악하기 어려워요!",
+    "googleLoginText": "구글 계정으로 로그인"
+  },
   "invoiceTable": {
     "paidStatus": {
       "PaySuccess": "결제 완료",
