랜딩페이지 업데이트 / 중간저장

--- a/public/locales/en/publicFooter.json
+++ b/public/locales/en/publicFooter.json
@@ -22,6 +22,9 @@
     "serviceUsage": "Term of Service Usage",
     "privacy": "Term of Privacy"
   },
+  "channels":{
+    "heading": "Channels"
+  },
   "lang": {
     "placeholder": "Select Language"
   }
