Update: Google Admin button / discloure tag 적용

--- a/public/locales/ko/google-compliance.json
+++ b/public/locales/ko/google-compliance.json
@@ -1,6 +1,9 @@
 {
-  "description1": "스코디는 지메일로부터 여러분의 메일 데이터를 조회할 때, 제한 사용 조건과 ",
+  "description1": "스코디는 구글 API로부터 여러분의 데이터를 조회할 때, 제한 사용 조건과 ",
   "policy": "구글 API 서비스 사용자 데이터 정책",
   "description2": "을 준수합니다.",
-  "assure": "결제 내역과 관련 없는 메일은 절대 조회하지 않습니다."
+  "assure": {
+    "gmail": "결제 내역과 관련 없는 메일은 절대 조회하지 않습니다.",
+    "admin": "워크스페이스 내 사용자와 관련 없는 데이터는 절대 조회하지 않습니다."
+  }
 }
