--- a/public/locales/en/google-compliance.json
+++ b/public/locales/en/google-compliance.json
@@ -2,5 +2,8 @@
   "description1": "Scordi's use and transfer of information received from Google APIs to any other app will adhere to ",
   "policy": "Google API Services User Data Policy",
   "description2": ", including the Limited Use requirements.",
-  "assure": "We can assure that we do not access emails unrelated to invoice, payments anda receipts."
+  "assure": {
+    "gmail": "We can assure that we do not access emails unrelated to invoice, payments anda receipts.",
+    "admin": "We can assure that we do not access any data unrelated to your workspace users' information."
+  }
 }
