FIx: 구독 상세 > 결제 내역 탭 / 결제내역 없을 때 제목 텍스트 변경

--- a/public/locales/en/org-home.json
+++ b/public/locales/en/org-home.json
@@ -17,6 +17,7 @@
     "googleLoginText": "Sign up with google"
   },
   "result_in_since_n_ago": "This is result from <b>{{since}}</b>",
+  "result_of_no_histories": "There is no history.",
   "summary_stat": {
     "counter": {
       "label": "Found",
