--- a/public/locales/ko/profile.json
+++ b/public/locales/ko/profile.json
@@ -1,6 +1,6 @@
 {
   "dropdown": {
-    "setting": "설정",
+    "setting": "내 정보 수정",
     "help": "고객센터",
     "goHomePage": "스코디 홈페이지로 이동",
     "logout": "로그아웃",
