--- a/public/locales/ko/workspaceSettings.json
+++ b/public/locales/ko/workspaceSettings.json
@@ -1,54 +1,164 @@
 {
-  "breadcrumb": {
-    "settings": "설정"
-  },
-  "menu": {
-    "general": "일반",
-    "workspace-info": "워크스페이스 정보",
-    "subscription-payment": "구독 및 결제",
-    "management-integration": "관리 및 연동",
-    "member-management": "멤버 관리",
-    "asset-connection": "자산 연결",
-    "service-integration": "서비스 연동"
-  },
-  "title": "워크스페이스 정보",
-  "basic": "기본",
-  "workspaceName": "워크스페이스명",
-  "address": "주소",
-  "registerAddress": "주소를 등록해주세요",
-  "member": "멤버",
-  "memberUnit": "명",
-  "subscription": "구독",
-  "plan": "플랜",
-  "freeTrial": "scordi 무료 체험",
-  "renewalDate": "갱신일",
-  "danger": {
-    "title": "워크스페이스 삭제",
-    "prompt": "삭제하려는 워크스페이스 이름 (\"{{orgName}}\") 을 입력해주세요.",
-    "promptRetry": "\"{{text}}\"를 입력하셨습니다. 삭제를 위해 \"{{orgName}}\" 를 입력해주세요.",
-    "cancel": "삭제를 취소했어요",
-    "success": "워크스페이스를 삭제했어요",
-    "desc1": "이 작업은 취소할 수 없습니다.",
-    "desc2": "워크스페이스 전체",
-    "desc3": "가 삭제됩니다.",
-    "deleteBtn": "삭제하기"
-  },
-  "setting": {
-    "title": "워크스페이스 설정",
-    "language": "언어 설정",
-    "languagePlaceholder": "언어를 선택해주세요.",
-    "korean": "한국어"
-  },
-  "changeModal": {
-    "title": "워크스페이스 정보 수정",
-    "desc": "워크스페이스의 기본 정보를 수정합니다.",
-    "addressPlaceholder": "주소를 입력해주세요",
-    "addressDetailPlaceholder": "상세 주소를 입력해주세요",
-    "saveBtn": "저장하기",
-    "saveSuccess": "변경사항을 저장했어요."
-  },
-  "addressModal": {
-    "searchAddress": "주소를 검색해주세요.",
-    "close": "닫기"
-  }
-} 
+    "breadcrumb": {
+        "settings": "설정"
+    },
+    "menu": {
+        "general": "일반",
+        "workspace-info": "워크스페이스 정보",
+        "subscription-payment": "구독 및 결제",
+        "management-integration": "관리 및 연동",
+        "member-management": "멤버 관리",
+        "asset-connection": "자산 연결",
+        "service-integration": "서비스 연동"
+    },
+    "title": "워크스페이스 정보",
+    "basic": "기본",
+    "workspaceName": "워크스페이스명",
+    "address": "주소",
+    "registerAddress": "주소를 등록해주세요",
+    "member": "멤버",
+    "memberUnit": "명",
+    "subscription": "구독",
+    "plan": "플랜",
+    "freeTrial": "scordi 무료 체험",
+    "renewalDate": "갱신일",
+    "danger": {
+        "title": "워크스페이스 삭제",
+        "prompt": "삭제하려는 워크스페이스 이름 (\"{{orgName}}\") 을 입력해주세요.",
+        "promptRetry": "\"{{text}}\"를 입력하셨습니다. 삭제를 위해 \"{{orgName}}\" 를 입력해주세요.",
+        "cancel": "삭제를 취소했어요",
+        "success": "워크스페이스를 삭제했어요",
+        "desc1": "이 작업은 취소할 수 없습니다.",
+        "desc2": "워크스페이스 전체",
+        "desc3": "가 삭제됩니다.",
+        "deleteBtn": "삭제하기"
+    },
+    "setting": {
+        "title": "워크스페이스 설정",
+        "language": "언어 설정",
+        "languagePlaceholder": "언어를 선택해주세요.",
+        "korean": "한국어"
+    },
+    "changeModal": {
+        "title": "워크스페이스 정보 수정",
+        "desc": "워크스페이스의 기본 정보를 수정합니다.",
+        "addressPlaceholder": "주소를 입력해주세요",
+        "addressDetailPlaceholder": "상세 주소를 입력해주세요",
+        "saveBtn": "저장하기",
+        "saveSuccess": "변경사항을 저장했어요."
+    },
+    "addressModal": {
+        "searchAddress": "주소를 검색해주세요.",
+        "close": "닫기"
+    },
+    "payment": {
+        "currentPlanInfo": "현재 플랜 정보",
+        "planChange": "플랜 변경",
+        "loading": "로딩 중",
+        "cardInfo": "카드 정보",
+        "cardRegistration": "카드 등록",
+        "noCardInfo": "카드 정보가 없어요.",
+        "mainCard": "메인 카드",
+        "subCard": "서브 카드",
+        "paymentHistory": "결제 내역",
+        "noPaymentHistory": "결제/환불 내역이 없어요.",
+        "cancelRefundInquiry": "취소/환불을 원하시나요?",
+        "paymentInfo": "결제 정보",
+        "paymentDate": "결제일",
+        "paymentType": "결제 구분",
+        "paymentAmount": "결제 금액",
+        "free": "무료",
+        "discounted": " (할인됨)",
+        "regularSubscription": "정기구독",
+        "won": "원",
+        "cancelCancellation": "해지 취소",
+        "cancelCancellationConfirm": "해지를 취소할까요?",
+        "cancellationCancelled": "해지를 취소 했어요",
+        "registrationDate": "등록일자",
+        "changeToMainCard": "메인 카드로 변경하기",
+        "changeToMainCardDesc": "현재 설정되는 메인 카드를 기준으로,",
+        "scordiPaymentMethod": "스코디 요금제를 지불하게 됩니다.",
+        "changePaymentMethod": "이 카드로 결제수단을 변경하시겠어요?",
+        "changeToSubCard": "서브 카드로 변경하기",
+        "changeToSubCardDesc": "메인 카드가 1개 이상 설정되지 않았다면,",
+        "cannotChangeToSubCard": "서브 카드로 바꿀 수 없습니다.",
+        "canChangeToMainCard": "언제든 서브 카드를 메인 카드로 바꿀 수 있습니다.",
+        "changesSaved": "변경사항을 저장했어요.",
+        "deletePaymentCard": "결제카드를 삭제할까요?",
+        "cannotUndo": "이 작업은 취소할 수 없습니다.",
+        "deleteFromWorkspace": "워크스페이스 전체에서 삭제됩니다.",
+        "stillDelete": "그래도 삭제하시겠어요?",
+        "deleted": "삭제 됐어요.",
+        "delete": "삭제하기",
+        "cannotUnsubscribe": "이 플랜은 해제 할 수 없어요.",
+        "reallyUnsubscribe": "이 구독을 정말 해지할까요?",
+        "dontWorry": "안심하세요",
+        "canUseRemainingPeriod": "1) 지금 해지해도 남은 구독 기간 동안 사용할 수 있어요.",
+        "until": "까지",
+        "noRenewalFromNextPayment": "2) 다음 결제일 부터 결제가 갱신되지 않아요.",
+        "unsubscribe": "해지하기",
+        "goBack": "돌아가기",
+        "unsubscribed": "해지 했어요",
+        "unsubscribeSubscription": "구독 해지하기",
+        "unsubscribeHelp": "문의 채널에서 구독 해지를 도와드리고 있어요.",
+        "clickConnectButton": "아래 연결하기 버튼을 클릭해 요청 해주세요.",
+        "connect": "연결하기",
+        "nextPlan": "다음 플랜",
+        "scheduledChangeDate": "변경 예정일",
+        "expirationDate": "종료 예정일",
+        "trialPeriodEnd": "체험 기간 종료",
+        "nextRenewalDate": "다음 갱신일",
+        "cannotLoadInvoice": "청구서 주소를 불러오지 못했습니다.\n관리자에게 문의해주세요.",
+        "viewInvoice": "청구서 보기"
+    },
+    "planCard": {
+        "selectPlan": {
+            "title": "플랜 선택"
+        },
+        "stepType": {
+            "month": "월간",
+            "year": "연간"
+        },
+        "secretCode": {
+            "placeholder": "쿠폰코드를 입력해주세요.",
+            "confirm": "확인",
+            "success": "쿠폰코드가 적용됐어요.",
+            "error": "쿠폰코드를 다시 확인해주세요."
+        },
+        "off": "할인",
+        "from": "부터",
+        "cancelScheduledPlan": "예정된 플랜을 취소할까요?",
+        "scheduledPlanCancelled": "예정된 플랜을 취소 했어요",
+        "nextPlan": "다음플랜",
+        "cancel": "취소",
+        "currentPlan": "현재플랜",
+        "consultation": "상담받기",
+        "changePlan": "변경하기",
+        "subscribe": "구독하기",
+        "freeForOneMonth": "1개월 무료",
+        "startNow": "시작하기",
+        "trialPeriodExpired": "무료 체험기간이 만료되었어요",
+        "customInquiry": "도입 문의",
+        "free": "무료",
+        "per": "당",
+        "basicPlan": {
+            "newMemberOnly": "신규 회원 전용 플랜",
+            "saasSubscriptionManagement": "팀별 이용중인 SaaS 구독 관리",
+            "unlimitedCardConnection": "결제 관리용 카드 연동 무제한",
+            "unlimitedEmailConnection": "청구서 수신 이메일 연동 무제한",
+            "googleWorkspaceAccountManagement": "구글워크스페이스 구성원 계정 관리"
+        },
+        "supportPlan": {
+            "allBasicFeatures": "모든 베이직 플랜 기능 포함",
+            "pgPaymentClassification": "PG 결제내역 분류",
+            "saasBulkRegistration": "SaaS 대량 등록",
+            "costChangeNotification": "비용변동 알림",
+            "monthlySaaSExpenseReport": "월간 SaaS 지출 리포트 발행"
+        },
+        "customPlan": {
+            "allSupportFeatures": "모든 서포터 플랜 기능 포함",
+            "customFeatureDevelopment": "기업 맞춤형 기능 개발",
+            "dedicatedManager": "전담 담당자 배정"
+        }
+    }
+}
