--- a/public/locales/ko/workspaceSettings.json
+++ b/public/locales/ko/workspaceSettings.json
@@ -160,5 +160,54 @@
             "customFeatureDevelopment": "기업 맞춤형 기능 개발",
             "dedicatedManager": "전담 담당자 배정"
         }
+    },
+    "memberManagement": {
+        "breadcrumb": "멤버 관리",
+        "searchPlaceholder": "검색어를 입력해주세요",
+        "inviteMember": "멤버 초대",
+        "noMembers": "구성원이 없어요.",
+        "registerMember": "구성원 등록",
+        "table": {
+            "count": "{{count}} 명",
+            "role": "권한"
+        },
+        "row": {
+            "sendingEmail": "이메일 전송중...",
+            "waitingInvitation": "초대 수락 대기중..."
+        },
+        "inviteModal": {
+            "title": "멤버 초대하기",
+            "desc": "구성원 회사메일을 입력하고 초대장을 전송해요.",
+            "inputLabel": "이메일",
+            "add": "추가",
+            "remove": "삭제",
+            "registering": "등록할 멤버 ({{count}})",
+            "sendInvite": "초대 메일 보내기",
+            "alreadyInvited": "이미 초대되어있는 멤버에요",
+            "inputEmail": "이메일을 입력해주세요.",
+            "confirmSend": "초대 메일을 전송할까요?",
+            "confirmSendDesc": "구성원 권한으로 모두 초대됩니다. \n 추후 소유자 권한으로 변경 가능합니다. \n 멤버가 초대를 받지 못하면, 다시 초대장을 보낼 수 있습니다.",
+            "sent": "초대 메일을 보냈어요."
+        },
+        "inviteInput": {
+            "add": "추가",
+            "remove": "삭제"
+        },
+        "remove": {
+            "cancelInvite": "멤버 초대를 취소할까요?",
+            "removeMember": "멤버를 삭제할까요?",
+            "cancelInviteDesc": "이미 초대장이 발송된 멤버입니다.\n\n워크스페이스 전체에서 멤버가 삭제됩니다. \n그래도 초대를 최소하시겠어요?",
+            "removeMemberDesc": "이 작업은 취소할 수 없습니다.\n\n워크스페이스 전체에서 삭제됩니다. \n그래도 삭제하시겠어요?",
+            "cancelled": "초대를 취소했어요.",
+            "removed": "삭제했습니다.",
+            "cancelInviteBtn": "초대 취소하기",
+            "removeBtn": "삭제하기"
+        },
+        "resend": {
+            "confirm": "초대 메일을 다시 전송할까요?",
+            "desc": "구성원 권한으로 초대됩니다.\n추후 소유자 권한으로 변경 가능합니다. \n멤버가 초대를 받지 못하면, 다시 초대장을 보낼 수 있습니다.",
+            "sent": "초대 메일을 다시 보냈어요.",
+            "resendBtn": "다시 보내기"
+        }
     }
 }
