--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -26,6 +26,21 @@
   },
   "count_of_name": "{{count}} of {{name}}",
   "subscribing_service": "Subs",
+  "nav": {
+    "home": "Home",
+    "subscription": "Subscriptions",
+    "subscriptionList": "Subscription List",
+    "billingStatus": "Billing Status",
+    "team": "Teams",
+    "teamList": "Team List",
+    "members": "Members",
+    "asset": "Assets",
+    "creditCard": "Credit Cards",
+    "invoiceMail": "Invoice Mails",
+    "work": "Works",
+    "request": "Requests",
+    "settings": "Settings"
+  },
   "orgTopBar": {
     "membershipLevelSuffix": " is ",
     "membershipLevelPostfix": "",
