--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,83 +1,86 @@
 {
-  "hi": "Hello",
-  "date": {
-    "year": "year",
-    "years": "years",
-    "month": "month",
-    "months": "months",
-    "month2": "month",
-    "month3": "months",
-    "week": "week",
-    "weeks": "weeks",
-    "day": "day",
-    "days": "days",
-    "hour": "hour",
-    "hours": "hours",
-    "minute": "min",
-    "minutes": "min",
-    "second": "sec",
-    "seconds": "sec",
-    "range": {
-      "all": "All",
-      "recent": "Recent {{value}}",
-      "this": "This {{value}}",
-      "last": "Last {{value}}"
-    }
-  },
-  "items": " items",
-  "count_of_name": "{{count}} of {{name}}",
-  "subscribing_service": "Subs",
-  "nav": {
-    "home": "Home",
-    "subscription": "Subscriptions",
-    "subscriptionList": "Subscription List",
-    "billingStatus": "Billing Status",
-    "team": "Teams",
-    "teamList": "Team List",
-    "members": "Members",
-    "asset": "Assets",
-    "creditCard": "Credit Cards",
-    "invoiceMail": "Invoice Mails",
-    "work": "Works",
-    "request": "Requests",
-    "settings": "Settings"
-  },
-  "orgTopBar": {
-    "membershipLevelSuffix": " is ",
-    "membershipLevelPostfix": "",
-    "dot": ".",
-    "subscriptionRegisterButton": "Register Subscription",
-    "profileDropdown": {
-      "nameSuffix": "",
-      "adminLink": "Scordi Admin"
+    "hi": "Hello",
+    "date": {
+        "year": "year",
+        "years": "years",
+        "month": "month",
+        "months": "months",
+        "month2": "month",
+        "month3": "months",
+        "week": "week",
+        "weeks": "weeks",
+        "day": "day",
+        "days": "days",
+        "hour": "hour",
+        "hours": "hours",
+        "minute": "min",
+        "minutes": "min",
+        "second": "sec",
+        "seconds": "sec",
+        "range": {
+            "all": "All",
+            "recent": "Recent {{value}}",
+            "this": "This {{value}}",
+            "last": "Last {{value}}"
+        }
     },
-    "workspaceDropdown": {
-      "createWorkspace": "Create new workspace"
+    "items": " items",
+    "count_of_name": "{{count}} of {{name}}",
+    "subscribing_service": "Subs",
+    "nav": {
+        "home": "Home",
+        "subscription": "Subscriptions",
+        "subscriptionList": "Subscription List",
+        "billingStatus": "Billing Status",
+        "team": "Teams",
+        "teamList": "Team List",
+        "members": "Members",
+        "asset": "Assets",
+        "creditCard": "Credit Cards",
+        "invoiceMail": "Invoice Mails",
+        "work": "Works",
+        "request": "Requests",
+        "settings": "Settings"
+    },
+    "orgTopBar": {
+        "membershipLevelSuffix": " is ",
+        "membershipLevelPostfix": "",
+        "dot": ".",
+        "subscriptionRegisterButton": "Register Subscription",
+        "profileDropdown": {
+            "nameSuffix": "",
+            "adminLink": "Scordi Admin"
+        },
+        "workspaceDropdown": {
+            "createWorkspace": "Create new workspace"
+        }
+    },
+    "footer": {
+        "companyName": "01Republic, Inc.",
+        "ceo": "CEO: Yonghyun Kim, Gyuri Kim",
+        "regNo": "Business Registration No: 227-86-02683",
+        "salesNo": "Online Sales Registration No: 2023-Seoul Seocho-3752",
+        "address": "Address: 5F, 6 Jongno, Jongno-gu, Seoul",
+        "customerService": "Customer Service: 02-2088-6337",
+        "copyright": "Copyright 2024 © 01Republic. All Rights Reserved",
+        "privacy": "Privacy Policy",
+        "terms": "Terms of Service"
+    },
+    "pagination": {
+        "total": "Total",
+        "of": "of",
+        "maxDisplay": "Maximum",
+        "all": "All",
+        "previous": "Previous",
+        "next": "Next"
+    },
+    "table": {
+        "emptyMessage": "No results found.",
+        "underConstruction": "Under construction",
+        "open": "Open",
+        "total": "Total"
+    },
+    "button": {
+        "back": "Back"
     }
-  },
-  "footer": {
-    "companyName": "01Republic, Inc.",
-    "ceo": "CEO: Yonghyun Kim, Gyuri Kim",
-    "regNo": "Business Registration No: 227-86-02683",
-    "salesNo": "Online Sales Registration No: 2023-Seoul Seocho-3752",
-    "address": "Address: 5F, 6 Jongno, Jongno-gu, Seoul",
-    "customerService": "Customer Service: 02-2088-6337",
-    "copyright": "Copyright 2024 © 01Republic. All Rights Reserved",
-    "privacy": "Privacy Policy",
-    "terms": "Terms of Service"
-  },
-  "pagination": {
-    "total": "Total",
-    "of": "of",
-    "maxDisplay": "Maximum",
-    "all": "All",
-    "previous": "Previous",
-    "next": "Next"
-  },
-  "table": {
-    "emptyMessage": "No results found.",
-    "underConstruction": "Under construction",
-    "open": "Open",
-    "total": "Total"
-  }
 }
